# compiler

./: Readme.md  explanation.excalidraw
pPIM-Compiler/: CMakeLists.txt  output.pim
pPIM-Compiler/include/: pPIMBackend.h  pPIMInstrFormats.td  pPIMInstrInfo.h  pPIMMemoryMap.h
pPIM-Compiler/lib/: CMakeLists.txt
pPIM-Compiler/lib/Backend/: CMakeLists.txt  pPIMBackend.cpp  pPIMMemoryMap.cpp
pPIM-Compiler/test/: CMakeLists.txt
pPIM-Compiler/test/MAC/: mac_8bit.cpp
pPIM-Compiler/test/MatrixMultiply/: matrix_multiply.bc  matrix_multiply.cpp  matrix_multiply.ll
pPIM-Compiler/tools/: CMakeLists.txt  pPIMCompiler.cpp
